--- a/infrastructure/docker/docker-compose.yml
+++ b/infrastructure/docker/docker-compose.yml
@@ -1,11 +1,16 @@
-version: "3.8"
 services:
-  localpos-user-service:
-    build:
-      context: ../../localpos-user-service
-      dockerfile: Dockerfile
-    ports:
-      - "8081:8080"
+  postgres:
+    image: postgres:15
+    container_name: localpos-postgres
     environment:
-      - SPRING_PROFILES_ACTIVE=dev
-  # Agregar servicios similares para otros microservicios
+      POSTGRES_DB: localpos_user_db
+      POSTGRES_USER: localpos_user
+      POSTGRES_PASSWORD: localpos_pass
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    restart: "no"  # Prevent auto-restart
+
+volumes:
+  pgdata:  # Volume for PostgreSQL data
