--- a/backend/localpos-inventory-service/src/main/resources/application.yml
+++ b/backend/localpos-inventory-service/src/main/resources/application.yml
@@ -6,3 +6,11 @@ spring:
     url: jdbc:postgresql://localhost:5432/localpos_user_db
     username: localpos_user
     password: localpos_pass
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
