--- a/backend/localpos-product-service/src/main/resources/application.yml
+++ b/backend/localpos-product-service/src/main/resources/application.yml
@@ -7,3 +7,10 @@ spring:
     username: localpos_user
     password: localpos_pass
     driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
