--- a/shared-libraries/java/localpos-common/pom.xml
+++ b/shared-libraries/java/localpos-common/pom.xml
@@ -6,7 +6,7 @@
 >
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.localpos</groupId>
+    <groupId>com.pds</groupId>
     <artifactId>localpos-common</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
