--- a/backend/java/localpos-user-service/src/main/resources/application.yml
+++ b/backend/java/localpos-user-service/src/main/resources/application.yml
@@ -23,5 +23,5 @@ app:
 
 security:
   jwt:
-    secret: I/O/UftKrK+1AyAVl0fg8g1Brqxvq5yO8g5mIULAa2M=
+    secret: ${JWT_SECRET}
     expiration-ms: 900000
