--- a/backend/kotlin/localpos-user-service-kt/src/main/resources/application.yml
+++ b/backend/kotlin/localpos-user-service-kt/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     allow-bean-definition-overriding: true
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/localpos_user_db
+    url: jdbc:postgresql://localhost:5432/localpos_db
     username: localpos_user
     password: localpos_pass
     driver-class-name: org.postgresql.Driver
