--- a/frontend/localpos-web-app/package.json
+++ b/frontend/localpos-web-app/package.json
@@ -10,8 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
+    "@sweetalert2/theme-material-ui": "^5.0.27",
+    "axios": "^1.10.0",
+    "formik": "^2.4.6",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^15.5.3",
+    "react-idle-timer": "^5.7.2",
+    "react-router-dom": "^7.6.3",
+    "sweetalert2": "^11.22.2",
+    "sweetalert2-react-content": "^5.1.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
