POS002: Add loggers and logback-spring.xml files

--- a/backend/java/localpos-product-service/pom.xml
+++ b/backend/java/localpos-product-service/pom.xml
@@ -118,6 +118,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Logback -->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>8.0</version>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
