--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,10 @@ frontend/localpos-mobile-app/.vscode/
 
 # Logs
 *.log
+*.log.json
+**/logs/
+**/logs/*.log
+**/logs/*.log.json
 
 # OS files
 .DS_Store
