--- a/backend/java/localpos-product-service/src/main/resources/application.yml
+++ b/backend/java/localpos-product-service/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
 app:
-  locale: es
+  locale: en
   cors:
     allowed-origins:
       - http://localhost:5173
